--- a/Style/main.css
+++ b/Style/main.css
@@ -1,6 +1,6 @@
-/* .redbox {
+.redbox {
     border: 2px solid red;
-} */
+}
 
 body {
     display: flex;
@@ -10,7 +10,7 @@ body {
 /* Side navigation bar and logo */
 #navbar {
     height: 100vh;
-    width: 25%;
+    width: 250px;
     background-color: #3A3A3A;
 }
 
@@ -54,6 +54,6 @@ li a.active {
 #main {
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 100%;
     padding-left: 10px;
 }
