--- a/Style/recipe.css
+++ b/Style/recipe.css
@@ -3,6 +3,8 @@
 #mainContent {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* Recipe card layout */
