--- a/Style/main.css
+++ b/Style/main.css
@@ -6,17 +6,24 @@
     border: 2px solid blue;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
 body {
     display: flex;
-    margin: 0;
+    align-items: stretch;
     background-color: #D1D3D4;
 }
 
-/* Side navigation bar and logo */
+/* Side nav bar */
+
 #navbar {
-    height: 100vh;
     width: 250px;
+    height: 100vh;
     background-color: #3A3A3A;
+    position: fixed;
 }
 
 #logo img {
@@ -61,6 +68,7 @@ li a.active {
     flex-direction: column;
     width: 100%;
     padding-left: 10px;
+    margin-left: 250px;
 }
 
 
