--- a/Style/recipe.css
+++ b/Style/recipe.css
@@ -39,11 +39,13 @@
 .recipeDetails ul {
     list-style-type: disc;
     padding-left: 20px;
+    padding-top: 0;
 }
 
 .recipeDetails ol {
     list-style-type: decimal;
     padding-left: 20px;
+    padding-top: 0;
 }
 
 
